good lord I need help again

--- a/msvc/neurology/neurology.vcxproj
+++ b/msvc/neurology/neurology.vcxproj
@@ -148,9 +148,11 @@
     <ClInclude Include="..\..\src\include\neurology.hpp" />
     <ClInclude Include="..\..\src\include\neurology\address.hpp" />
     <ClInclude Include="..\..\src\include\neurology\allocators.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\allocators\local.hpp" />
     <ClInclude Include="..\..\src\include\neurology\allocators\void.hpp" />
     <ClInclude Include="..\..\src\include\neurology\configuration.hpp" />
     <ClInclude Include="..\..\src\include\neurology\exception.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\object.hpp" />
     <ClInclude Include="..\..\src\include\neurology\pe.hpp" />
     <ClInclude Include="..\..\src\include\neurology\pe\dos.hpp" />
     <ClInclude Include="..\..\src\include\neurology\pe\file.hpp" />
@@ -165,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\lib\address.cpp" />
+    <ClCompile Include="..\..\src\lib\allocators\local.cpp" />
     <ClCompile Include="..\..\src\lib\allocators\void.cpp" />
     <ClCompile Include="..\..\src\lib\configuration.cpp" />
     <ClCompile Include="..\..\src\lib\exception.cpp" />
