start making actual tests. shit will be buggy if I dont.

--- a/msvc/neurology-test/neurology-test.vcxproj
+++ b/msvc/neurology-test/neurology-test.vcxproj
@@ -155,9 +155,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\test\main.hpp" />
+    <ClInclude Include="..\..\src\test\test.hpp" />
+    <ClInclude Include="..\..\src\test\tests\address.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\test\main.cpp" />
+    <ClCompile Include="..\..\src\test\test.cpp" />
+    <ClCompile Include="..\..\src\test\tests\address.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
