--- a/msvc/neurology-test/neurology-test.vcxproj.filters
+++ b/msvc/neurology-test/neurology-test.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="..\..\src\test\tests\address.hpp">
       <Filter>Header Files\tests</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\test\tests\localalloc.hpp">
+      <Filter>Header Files\tests</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\test\main.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\test\tests\address.cpp">
+      <Filter>Source Files\tests</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\test\tests\localalloc.cpp">
       <Filter>Source Files\tests</Filter>
     </ClCompile>
   </ItemGroup>
