--- a/msvc/neurology-test/neurology-test.vcxproj.filters
+++ b/msvc/neurology-test/neurology-test.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="..\..\src\test\tests\object.hpp">
       <Filter>Header Files\tests</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\test\tests\virtualalloc.hpp">
+      <Filter>Header Files\tests</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\test\main.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files\tests</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\test\tests\object.cpp">
+      <Filter>Source Files\tests</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\test\tests\virtualalloc.cpp">
       <Filter>Source Files\tests</Filter>
     </ClCompile>
   </ItemGroup>
