--- a/msvc/neurology-test/neurology-test.vcxproj.filters
+++ b/msvc/neurology-test/neurology-test.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="..\..\src\test\tests\virtualalloc.hpp">
       <Filter>Header Files\tests</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\test\tests\process.hpp">
+      <Filter>Header Files\tests</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\test\main.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files\tests</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\test\tests\virtualalloc.cpp">
+      <Filter>Source Files\tests</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\test\tests\process.cpp">
       <Filter>Source Files\tests</Filter>
     </ClCompile>
   </ItemGroup>
