--- a/msvc/neurology/neurology.vcxproj.filters
+++ b/msvc/neurology/neurology.vcxproj.filters
@@ -69,6 +69,12 @@
     <ClInclude Include="..\..\src\include\neurology\win32\handle.hpp">
       <Filter>Header Files\neurology\win32</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\include\neurology\win32\process.hpp">
+      <Filter>Header Files\neurology\win32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\include\neurology\win32.hpp">
+      <Filter>Header Files\neurology</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\lib\exception.cpp">
@@ -90,6 +96,9 @@
       <Filter>Source Files\allocators</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\lib\win32\handle.cpp">
+      <Filter>Source Files\win32</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\lib\win32\process.cpp">
       <Filter>Source Files\win32</Filter>
     </ClCompile>
   </ItemGroup>
